@@ -1,3 +1,9 @@
+2023-07-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dvibook.c, dviconcat.c, dviselect.c, dvitodvi.c:
+	Skip Unicode conversion if command line arguments are missing
+	in order to prevent unwanted looking for texmf.cnf. (Windows only)
+
 2020-09-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* configure.ac: SeeTeX Ver.20200908
